Add a back button

--- a/client/pages/forgot.html
+++ b/client/pages/forgot.html
@@ -29,6 +29,8 @@
 					value="submit"
 					class="form-btn submit"
 					ng-click="$location.path('/forgotconfirm');">submit</button>
+
+					<a name="back" class="form-btn" ng-click="go('/login','slideRight')"> cancel</a>
 			</div>
 
 		</form>
