Text updates, remove unused button

--- a/client/pages/main.html
+++ b/client/pages/main.html
@@ -2,7 +2,7 @@
 
     <!-- Content -->
     <section class="page-content">
-       <h1>REST/MEAN Seed Project</h1>
+       <h1>Main</h1>
        <p>This is the main page.</p>
     </section>
 
