Project name change

--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -1,7 +1,7 @@
 <div class="page login-page">
 
     <section class="page-content">
-        <h1>REST/MEAN Seed Application</h1>
+        <h1>MEAN Seed Application</h1>
 
     	<!-- Login Form Container-->
         <div class="form-item">
