Add a logout button

--- a/client/pages/settings.html
+++ b/client/pages/settings.html
@@ -2,6 +2,6 @@
 
     <section class="page-content">
         <p>This is the settings page</p>
-
+        <button class="sign-out" ng-click="logout()">sign out</button>
     </section>
 </div>
