Normalize placement of cancel links, action button titles

--- a/client/pages/forgot.html
+++ b/client/pages/forgot.html
@@ -28,8 +28,8 @@
 					type="button"
 					value="submit"
 					class="form-btn submit"
-					ng-click="$location.path('/forgotconfirm');">submit</button>
-
+					ng-click="$location.path('/forgotconfirm');">reset</button>
+					or
 					<a name="back" class="form-btn" ng-click="go('/login','slideRight')"> cancel</a>
 			</div>
 
