--- a/client/pages/signup.html
+++ b/client/pages/signup.html
@@ -113,7 +113,7 @@
 					<input
 						ng-model="newAccount.terms"
 						type="checkbox"
-						required> I accept the <a ng-click="go('/tos')">terms of service</a> & <a ng-click="go('/privacy')">privacy policy</a>.
+						required> I accept the <a ng-click="go('/tos', 'slideLeft')">terms of service</a> & <a ng-click="go('/privacy', 'slideLeft')">privacy policy</a>.
 				</div>
 
 				<!-- Form Action Buttons -->
