--- a/client/pages/forgot.html
+++ b/client/pages/forgot.html
@@ -2,38 +2,62 @@
 
 	<section class="page-content">
 
-		<!-- message -->
-		<div class="form-message">
-			<p>Enter the email address associated with your account in order to reset your password.</p>
+		<h1>Forgot your password?</h1>
+
+
+		<div class="row">
+
+			<div class="columns small-10 small-offset-1 medium-6 medium-offset-3 large-6 large-offset-3">
+
+				<!-- message -->
+				<div>
+  					<p>Enter your email address and we'll send you a link to reset your password.</p>
+				</div>
+
+				<!-- Reset Password Form -->
+				<form name="userAccount" novalidate>
+
+					<!-- Email Address -->
+                    <div class="form-item">
+
+                        <label for="email">Email address</label>
+
+                        <input
+                            ng-model="userAccount.email"
+                            ng-focus="focusField = 'email'"
+                            ng-blur="focusField = ''"
+                            name="mail"
+                            type="email"
+                            required
+                            placeholder="name@domain.com"
+                        />
+
+                        <!-- Email Validation Messages -->
+                        <div class="validation-messages" ng-cloak ng-show="userAccount.mail.$dirty">
+                            <span class="valid-message" ng-cloak ng-show="userAccount.mail.$error.required">Email Required</span>
+                            <span class="valid-message animate" ng-cloak ng-show="userAccount.mail.$error.email && focusField != 'email'">Invalid Email Format</span>
+                        </div>
+                    </div>
+
+					<!-- Form Action Buttons -->
+					<div class="action-buttons">
+						<button
+							name="submit"
+							type="button"
+							value="submit"
+							class="form-btn submit"
+							ng-click="$location.path('/forgotconfirm');"
+							ng-disabled="!userAccount.$valid">reset</button>
+							or
+							<a name="back" class="form-btn" ng-click="go('/login','slideRight')"> cancel</a>
+					</div>
+
+				</form>
+
+			</div>
+
 		</div>
 
-		<!-- Reset Password Form -->
-		<form>
-			<!-- Email Address -->
-			<div class="form-item">
-
-				<input
-					name="mail"
-					type="email"
-					required
-					placeholder="you@domain.com"
-				>
-			</div>
-
-
-			<!-- Form Action Buttons -->
-			<div class="form-action">
-				<button
-					name="submit"
-					type="button"
-					value="submit"
-					class="form-btn submit"
-					ng-click="$location.path('/forgotconfirm');">reset</button>
-					or
-					<a name="back" class="form-btn" ng-click="go('/login','slideRight')"> cancel</a>
-			</div>
-
-		</form>
-
     </section>
+
 </div>
